--- a/museum_guide_pkg/package.xml
+++ b/museum_guide_pkg/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>museum_introducer_pkg</name>
+  <name>museum_guide_pkg</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="ghtn10000@naver.com">ghtn10000</maintainer>
@@ -9,9 +9,8 @@
 
   <depend>rclpy</depend>
   <depend>std_msgs</depend>
-  <depend>sensor_msgs</depend>
-  <depend>cv_bridge</depend>
   <depend>geometry_msgs</depend>
+  <depend>action_msgs</depend>
   <depend>museum_robot_msgs</depend>
 
   <test_depend>ament_copyright</test_depend>
@@ -21,6 +20,5 @@
 
   <export>
     <build_type>ament_python</build_type>
-    <launch_file>launch/museum_guide_launch.py</launch_file>
   </export>
 </package>
